<?xml version="1.0" encoding="utf-8"?>
<resources>


    <string name="title_activity_main">ShimBi Invoice</string>
    <string name="title_activity_invoice">InvoiceActivity</string>
    <string name="title_activity_invoice_details">InvoiceDetails</string>
    <string name="title_activity_reciept_list">RecieptListActivity</string>
    <string name="title_activity_over_dues_list">OverDuesListActivity</string>
    <string name="title_activity_query">QueryActivity</string>
    <string name="lbl_login">Login:</string>
    <string name="lbl_password">Password:</string>
    <string name="bt_login">Login</string>
    <string name="bt_cancel">Cancel</string>
    <string name="email">E-mail</string>

    <string name="query">Query</string>
    <string name="over_due">Over Due</string>
    <string name="receipt">Receipt</string>
    <string name="welcome_msg"> Welcome Dude!</string>
    <string name="lbl_total_amt">Total Amount (INR)</string>
    <string name="lbl_separator"> :  </string>
    <string name="lbl_receipts">Receipts</string>
    <string name="lbl_invoice_no">Invoice No. </string>
    <string name="date">Date </string>
    <string name="Receipt_amount">Amount (INR)</string>
    <string name="invoice_no">Invoice No. </string>
    <string name="heading_reciepts"> Latest 10 Receipts</string>
    <string name="heading_invoices"> Latest 10 Invoices</string>
    <string name="heading_over_due"> Over Due Invoices</string>
    <string name="heading_query"> Send Your Query</string>
    
    <string name="lbl_subject"> Subject</string>
    <string name="lbl_my_query"> My Query</string>
    <string name="send">Send</string>
    <string name="lbl_towards">Towards </string>
    <string name="lbl_due_date">Due Date</string>
    <string name="lbl_discount">Discount</string>
    <string name="lbl_others">Others</string>
    <string name="lbl_terms_conditions">Terms and Conditions</string>
    <string name="lbl_Payable_Amt">Payable Amt (INR)</string>
    <string name="lbl_receipt_no">Receipt No.</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="others">Others</string>
    <string name="app_name">SHIMBI INVOICE</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_invoice_detail">Invoice_detail</string>
    <string name="title_activity_test__ui">Test_Ui</string>
    <string name="title_activity_menu_list">Menu_list</string>
    <string name="title_activity_selected__opration_list">Selected_Opration_list</string>
    <string name="title_activity_opration_details">Opration_details</string>
    <string name="title_activity_opration__menu">Opration_Menu</string>
    <string name="invoice_date">Invoice Date</string>
    <string name="due_date">Due Date</string>
    <string name="amount">Amount(INR)</string>
    <string name="Service_tax">Service tax(20%)</string>
    <string name="Sales_tax">Sales tax(30%)</string>
    <string name="payabal_amount">Payable Amount (INR)</string>
    <string name="paid_amount">Paid Amount(INR)</string>
    <string name="balance">Balance</string>
    <string name="estimate_date">Estimate Date</string>

    <string name="question_mark"> "?" </string>
    <string name="remember_me">Remember Me!</string>
    <string name="app_link">htttp://mybilling.biz/</string>
    <string name="domain_name_value">abhi</string>
    <string name="click_here">Click Here</string>
    <string name="user_id">abc@shim-bi.com</string>
    <string name="password">*******</string>
    <string name="user_id_text">USER ID</string>
    <string name="password_text">PASSWORD</string>
    <string name="domain_name">DOMAIN NAME</string>
    <string name="welcome">Welcome User</string>
    <string name="receipts">Receipt</string>
    <string name="invoice">Invoice</string>
    <string name="overdue">Overdue</string>
    <string name="colon">:</string>


</resources>
